# rust_aas_edge_client

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  aas_client.env  authors.sh  docker-compose.yaml
.github/workflows/: docker-build-push.yml
backend/src/: error.rs  main.rs  routes.rs
backend/src/functions/: aas_interfaces.rs  bash_command.rs  mod.rs  onboarding.rs  scheduler_task.rs
backend/src/handlers/: home.rs  mod.rs  openapi.rs  picture.rs  submodels.rs
backend/src/state/: mod.rs
docker_compose_package/: aas_client.env  docker-compose.yaml
docker_compose_package/mount_volumes/frontend/: theme.json
docs/: Backend.md  Deployment-docker.md
frontend/: Dockerfile
frontend/src/: App.jsx  index.js  reportWebVitals.js
frontend/src/components/charts/: PieChart.jsx  TimeSeriesChart.jsx
frontend/src/components/common/: ImageFromBackend.jsx
frontend/src/hooks/: useCustomTheme.jsx
frontend/src/pages/: HomePage.jsx  NetworkConfigurationPage.jsx  PageContainer.jsx  SystemInformationPage.jsx
frontend/src/services/: apiService.js  pictureService.js  submodelsService.js
mount_volumes/backend/static/: asset_info.json
mount_volumes/frontend/: company-link.json
scripts/aas_client/: sysInfo.sh
src/: lib.rs  main.rs  routes.rs
src/functions/: aas_interfaces.rs  onboarding.rs  scheduler_task.rs
src/handlers/: book.rs  database.rs  home.rs  mod.rs  openapi.rs  submodels.rs  thumbnail.rs
src/lib/: aas_interfaces.rs  bash_command.rs  database.rs  mod.rs  onboarding.rs  scheduler_task.rs
src/models/: book.rs
src/state/: mod.rs
(+12 files in other folders)
